--- a/representation/template_Beamer.tex
+++ b/representation/template_Beamer.tex
@@ -99,7 +99,7 @@
 \AtBeginSection[]
 {
 	\begin{frame}
-	\frametitle{Table of Contents}
+	\frametitle{Nội dung}
 	\tableofcontents[currentsection, hideothersubsections]
 	\end{frame}
 }
