--- a/representation/template_Beamer.tex
+++ b/representation/template_Beamer.tex
@@ -76,6 +76,7 @@
 	%\setbeamertemplate{navigation symbols}{} % To remove the navigation symbols from the bottom of all slides uncomment this line
 }
 
+\usepackage{amsmath}
 \usepackage{graphicx} % Allows including images
 \usepackage[utf8]{vietnam}
 \usepackage{booktabs} % Allows the use of \toprule, \midrule and \bottomrule in tables
@@ -217,102 +218,121 @@
 			\item $Q_k$: Khối lượng hàng tối đa xe thứ $k$ có thể chở ($k=1,2,...,K$)
 		\end{itemize}
 	\end{frame}
+
 	\begin{frame}
-	\frametitle{Mô hình bài toán}
-	\textbf{\underline{Biến quyết định}}
-	\begin{itemize}
-		\item $x_{ij}$: Biến nhị phân, xác định cung đi từ điểm $i$ đến điểm $j$ có xuất hiện trong lộ trình của 1 trong $k$ xe không ($i,j\in \{1,2,...,2N+2M+2K$)
-		\begin{equation}
-		x_{ij} = 
-		\begin{cases}
-		1 & \text{nếu cung $(i,j)$ có trong lộ trình của 1 xe}\\
-		0 & \text{ngược lại}
-		\end{cases}
-		\end{equation}
-		\item Tại mỗi điểm $i$ ($i=1,2,...,2N+2M+2K$):
+		\frametitle{Mô hình bài toán}
+		\textbf{\underline{Biến quyết định}}
 		\begin{itemize}
-			\item $r_i$: chỉ số của xe đi qua điểm $i$ trong lộ trình
+			\item $x_{ij}$: Biến nhị phân, xác định cung đi từ điểm $i$ đến điểm $j$ có xuất hiện trong lộ trình của 1 trong $k$ xe không ($i,j\in \{1,2,...,2N+2M+2K$)
 			\begin{equation}
-			1\leq r_i\leq K
+				x_{ij} = 
+				\begin{cases}
+				1 & \text{nếu cung $(i,j)$ có trong lộ trình của 1 xe}\\
+				0 & \text{ngược lại}
+				\end{cases}
 			\end{equation}
-			\item $l_i$: khoảng cách tích lũy của xe đi từ điểm $0$ đến điểm $i$ trong lộ trình
-			\begin{equation}
-			0\leq l_i < \infty
-			\end{equation}
-			\item $c_i$: khối lượng hàng xe $k$ (đi qua điểm $i$) còn chịu được khi đi tới điểm $i$
-			\begin{equation}
-			0\leq c_i\leq \max _{1\leq k\leq K} \{Q_k\}
-			\end{equation}
+			\item Tại mỗi điểm $i$ ($i=1,2,...,2N+2M+2K$):
+			\begin{itemize}
+				\item $r_i$: chỉ số của xe đi qua điểm $i$ trong lộ trình
+					\begin{equation}
+					1\leq r_i\leq K
+					\end{equation}
+				\item $l_i$: khoảng cách tích lũy của xe đi từ điểm $0$ đến điểm $i$ trong lộ trình
+					\begin{equation}
+					0\leq l_i < \infty
+					\end{equation}
+				\item $c_i$: khối lượng hàng xe $k$ (đi qua điểm $i$) còn chịu được khi đi tới điểm $i$
+					\begin{equation}
+					0\leq c_i\leq \max _{1\leq k\leq K} \{Q_k\}
+					\end{equation}
+			\end{itemize}
 		\end{itemize}
-	\end{itemize}
-	
-\end{frame}
-\begin{frame}
-\frametitle{Mô hình bài toán}
-\textbf{\underline{Ràng buộc}}
-\begin{itemize}
-\item Ràng buộc cân bằng luồng vào ra:
-\begin{align}
-\sum_{j=1}^{2N+2M+2K} x_{ij} = 1,\quad & i=1,2,...,2N+2M+K \\
-\sum_{i=1}^{2N+2M+2K} x_{ij} = 1,\quad & j=1,2,...,2N+2M;2N+2M+K+1,...,2N+2M+2K
-\end{align}
-\item Xác định $r_i$:
-\begin{align}
-r_{2N+2M+k} = k,\quad & k=1,2,...,K \\
-r_j - r_i\leq \mu\times (1 - x_{ij}),\quad & i=1,2,...,2N+2M+2K, \\
-r_j - r_i\geq -\mu\times (1 -x_{ij}),\quad & j=1,2,...,2N+2M;2N+2M+K+1,...,2N+2M+2K, i\ne j \notag
-\end{align}
-\end{itemize}
-\end{frame}
-\begin{frame}
-\frametitle{Mô hình bài toán}
-\begin{itemize}
-\item Xác định $l_i$:
-\begin{align}
-l_{2N+2M+k} = 0,\quad & k=1,2,...,K \\
-l_j - l_i -d_{ij}\leq \mu\times (1 - x_{ij}),\quad & i=1,2,...,2N+2M+2K, \\
-l_j - l_i -d_{ij}\geq -\mu\times (1 - x_{ij}),\quad & j=1,2,...,2N+2M;2N+2M+K+1,...,2N+2M+2K, i\ne j \notag
-\end{align}
-\item Xác định $c_i$:
-\begin{align}
-c_{2N+2M+k} = Q_k,\quad & k=1,2,...,K \\
-c_j - c_i - w_j\leq \mu\times (1 - x_{ij}),\quad & i=1,2,...,2N+2M+2K, \\
-c_j - c_i - w_j\geq -\mu\times (1 - x_{ij}),\quad & j=1,2,...,2N+2M;2N+2M+K+1,...,2N+2M+2K, i\ne j \notag \notag
-\end{align}
-\end{itemize}
-\end{frame}
-\begin{frame}
-\frametitle{Mô hình bài toán}
-\begin{itemize}
-\item Điểm đón và trả của hành khách $i$ phải thuộc lộ trình của cùng một xe, tương tự với các gói hàng:
-\begin{align}
-r_i = r_{i+N+M},\quad & i=1,2,...,N+M
-\end{align}
-\item Điểm đón khách phải liền trước điểm trả khách:
-\begin{align}
-x_{i,(i+N+M)} = 1,\quad & i=1,2,...,N
-\end{align}
-\item Điểm lấy hàng phải ở trước điểm giao hàng:
-\begin{align}
-l_i \leq l_{i+N+M},\quad & i=N+1,N+2,...,N+M
-\end{align}
-\item Khối lượng còn lại của xe tại mọi thời điểm không âm (đã thỏa mãn).
-\end{itemize}
-\end{frame}
-\begin{frame}
-\frametitle{Mô hình bài toán}
-\begin{itemize}
-\item $L$: Độ dài của lộ trình xe dài nhất trong $K$ lộ trình
-\item Ràng buộc xác định lộ trình dài nhất:
-\begin{align}
-l_i\leq L,\quad & i=2N+2M+K+1,...,2N+2M+2K
-\end{align}
-\end{itemize}
-\textbf{\underline{Hàm mục tiêu}}
-\begin{equation}
-L \leftarrow min
-\end{equation}
-\end{frame}
+	\end{frame}
+
+	\begin{frame}
+		\frametitle{Mô hình bài toán}
+		\textbf{\underline{Ràng buộc}} (ký hiệu $P=2N+2M$)
+		\begin{itemize}
+			\item Ràng buộc cân bằng luồng vào ra:
+				\begin{align}
+				\sum_{j=1}^{2N+2M+2K} x_{ij} = 1,\quad & \forall i\in [1..(P+K)] \\
+				\sum_{i=1}^{2N+2M+2K} x_{ij} = 1,\quad & \forall j\in [1..P]\cup [(P+K+1)..(P+2K)]
+				\end{align}
+			\item Xác định $r_i$:
+				\begin{align}
+				r_{2N+2M+k} = k, &\forall& k=1,2,...,K \\
+				\begin{cases}
+				$r_j - r_i\leq \mu\times (1 - x_{ij}), & x\forall j\in [1...P]\cup [(P+K+1)...(P+2K)],\\ 
+				r_j - r_i\geq -\mu\times (1 -x_{ij}), & xi\in [1...(P+2K)], i\ne j$
+				\end{cases}
+				
+				\end{align}
+				\begin{align*}
+				&r_{2N+2M+k} = k, &\forall& k=1,2,...,K \\
+				\begin{split}
+				r_j - r_i\leq \mu\times (1 - x_{ij}) \\ 
+				r_j - r_i\geq -\mu\times (1 -x_{ij})
+				\end{split}
+				,\quad&
+				\begin{split}
+				\forall &j=1,2,...,2N+2M;2N+2M+K+1,...,2N+2M+2K,\\
+				&i=1,2,...,2N+2M+2K, i\ne j
+				\end{split}
+				\end{align*}
+		\end{itemize}
+	\end{frame}
+
+	\begin{frame}
+		\frametitle{Mô hình bài toán}
+		\begin{itemize}
+			\item Xác định $l_i$:
+				\begin{align}
+				l_{2N+2M+k} = 0,\quad & k=1,2,...,K \\
+				l_j - l_i -d_{ij}\leq \mu\times (1 - x_{ij}),\quad & i=1,2,...,2N+2M+2K, \\
+				l_j - l_i -d_{ij}\geq -\mu\times (1 - x_{ij}),\quad & j=1,2,...,2N+2M;2N+2M+K+1,...,2N+2M+2K, i\ne j \notag
+				\end{align}
+			\item Xác định $c_i$:
+				\begin{align}
+				c_{2N+2M+k} = Q_k,\quad & k=1,2,...,K \\
+				c_j - c_i - w_j\leq \mu\times (1 - x_{ij}),\quad & i=1,2,...,2N+2M+2K, \\
+				c_j - c_i - w_j\geq -\mu\times (1 - x_{ij}),\quad & j=1,2,...,2N+2M;2N+2M+K+1,...,2N+2M+2K, i\ne j \notag \notag
+				\end{align}
+		\end{itemize}
+	\end{frame}
+
+	\begin{frame}
+		\frametitle{Mô hình bài toán}
+		\begin{itemize}
+			\item Điểm đón và trả của hành khách $i$ phải thuộc lộ trình của cùng một xe, tương tự với các gói hàng:
+				\begin{align}
+				r_i = r_{i+N+M},\quad & i=1,2,...,N+M
+				\end{align}
+			\item Điểm đón khách phải liền trước điểm trả khách:
+				\begin{align}
+				x_{i,(i+N+M)} = 1,\quad & i=1,2,...,N
+				\end{align}
+			\item Điểm lấy hàng phải ở trước điểm giao hàng:
+				\begin{align}
+				l_i \leq l_{i+N+M},\quad & i=N+1,N+2,...,N+M
+				\end{align}
+			\item Khối lượng còn lại của xe tại mọi thời điểm không âm (đã thỏa mãn).
+		\end{itemize}
+	\end{frame}
+
+	\begin{frame}
+		\frametitle{Mô hình bài toán}
+		\begin{itemize}
+			\item $L$: Độ dài của lộ trình xe dài nhất trong $K$ lộ trình
+			\item Ràng buộc xác định lộ trình dài nhất:
+				\begin{align}
+				l_i\leq L,\quad & i=2N+2M+K+1,...,2N+2M+2K
+				\end{align}
+		\end{itemize}
+		\textbf{\underline{Hàm mục tiêu}}
+			\begin{equation}
+			L \leftarrow min
+			\end{equation}
+	\end{frame}
 
 	%------------------------------------------------
 	
